<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/diabetic_title"
        android:id="@+id/title"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:text="@string/diabetic_subtitle"
        android:textAlignment="center"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/labelText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label2"
        android:layout_below="@id/subtitle"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="70dp"
        app:endIconMode="clear_text"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/labelText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label3"
        android:layout_below="@id/labelText2"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="15dp"
        app:endIconMode="clear_text"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/labelText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label5"
        android:layout_below="@id/labelText3"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="15dp"
        app:endIconMode="clear_text"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/labelText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label6"
        android:layout_below="@id/labelText5"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="15dp"
        app:endIconMode="clear_text"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/diabPredictButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelText6"
        android:layout_marginStart="145dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="80dp"
        android:text="Predict" />


</RelativeLayout>

